# UTFC

./: CMakeLists.txt  LICENSE  README.MD  utfc.pc.in
doc/html/: annotated.html  annotated_dup.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_3551c5bd1eb93bffc892448ae27f5a34.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8267895f62d73879727a3153a3123764.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  index.html  md__r_e_a_d_m_e.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  structutf8__codepoint____.html  structutf8__codepoint____.js  utfc_8h_source.html  utfc_8hpp_source.html
doc/html/search/: all_0.js  classes_0.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  md__r_e_a_d_m_e.tex  refman.tex  structutf8__codepoint____.tex
doc/man/man3/: md__r_e_a_d_m_e.3  utf8_codepoint__.3
doc/rtf/: refman.rtf
doc/xml/: _c_make_c_compiler_id_8c.xml  _r_e_a_d_m_e_8_m_d.xml  dir_13e138d54eb8818da29c3992edef070a.xml  dir_3551c5bd1eb93bffc892448ae27f5a34.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_8267895f62d73879727a3153a3123764.xml  dir_95e29a8b8ee7c54052c171a88bb95675.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  dir_f89abcb304c928c7d889aa5625570de5.xml  feature__tests_8c.xml  index.xml  md__r_e_a_d_m_e.xml  structutf8__codepoint____.xml  test_8c.xml  utfc_8c.xml  utfc_8h.xml  utfc_8hpp.xml
include/: utfc.h
src/: utfc.c
test/: test.c
